# artmind9

./: .env.example  .gitignore  LICENSE  Query_specs.md  README.md  justfile  paths.py  plan.md  pyproject.toml
artmind/: cli.py  dashboard.py  db.py  extraction.py  graph_query.py  graph_snapshot.py  harmonizer.py  ingest.py  jobs.py  kg_pull.py  refine_graph.py  setup.py  text2cypher.py  update.py  vector_query.py  wizard.py  wizard_commands.py  worker.py
banking_document_corpus/: index.md  schema_mapping.md
banking_document_corpus/faqs/: product_faq.md  website_faq.md
banking_document_corpus/governance/: board_risk_committee_charter.md  board_risk_committee_minutes_q1_2026.md  governance_framework_overview.md  internal_audit_charter.md
banking_document_corpus/guides/: complaint_resolution_guide.md  escalation_matrix.md  fraud_investigation_procedure.md
benchmarking/: specs.md
docs/: Query_specs.md
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: click_cli_hierarchy.py  migrate_poole.py
test/: test_db_update.py  test_docs_clean_cli.py  test_domains_cli.py  test_entity_embeddings.py  test_extraction.py  test_graph_query.py  test_graph_snapshot.py  test_ingest_sync_cli.py  test_kg_pull.py  test_pull_kg_cli.py  test_query_cli.py  test_text2cypher.py  test_update.py  test_update_cli.py  test_vector_query.py
tests/: test_domain_filter.py  test_harmonizer.py  test_wizard.py  test_wizard_commands.py  test_wizard_jq.py
utils/: functions.py
wizard_fixtures/: sample_fiction.md
(+742 files in other folders)
